<resources>
    <string name="add_event_title">Select Title</string>
    <string name="add_image_button">Add Image</string>
    <string name="app_name">UTimeline</string>
    <string name="app_logo_desc">UTimeline Logo with UTexas image</string>
    <string name="cancel_event">Cancel</string>
    <string name="create_event">Done</string>
    <string name="description_input_linenum">5</string>
    <string name="description_input_placeholder">Enter Description</string>
    <string name="event_detail_date_text">01/01/2016</string>
    <string name="event_detail_delete_button_text">Delete</string>
    <string name="event_detail_description_text">The description entered for a user\'s event goes here</string>
    <string name="event_detail_edit_button_text">Edit</string>
    <string name="event_detail_image_description">Cover photo image for a UTimelineEvent</string>
    <string name="event_detail_title_text">Event Name Here</string>
    <string name="first_event_button">Add First Event</string>
    <string name="set_event_date">Change Date</string>
    <string name="add_event_photo">"Add Photo"</string>
    <string name="delete_event_photo">"Delete Photo"</string>
    <string name="title_activity_detail_view">Event Detail View</string>
    <string name="custom_title">Custom Title</string>
    <string name="submit_title">Submit</string>
    <string name="plan_future_button_text">Plan Future</string>
    <string name="add_new_button_text">Add New Event</string>
    <string name="view_detail_text"><![CDATA[View Detail >]]></string>
    <string name="add_future_buttontitle">addFuture</string>
    <string name="event_titlee">Event Title</string>

</resources>
