<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="net.srogers.utimeline.DetailViewActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/event_detail_image"
                android:contentDescription="@string/event_detail_image_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/event_detail_title"
                android:background="@drawable/description_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_detail_title_text"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/event_detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/event_detail_date_text"
                    android:gravity="center_vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="end">

                    <Button
                        android:id="@+id/event_detail_edit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_detail_edit_button_text"
                        android:textColor="#CF5300"
                        android:background="@drawable/button_background"
                        android:layout_margin="5dp"/>

                    <Button
                        android:id="@+id/event_detail_delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_detail_delete_button_text"
                        android:textColor="#CF5300"
                        android:background="@drawable/button_background"
                        android:layout_margin="5dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/description_background">

                <TextView
                    android:id="@+id/event_detail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:padding="5dp"
                    android:minLines="@string/description_input_linenum"
                    android:maxLines="@string/description_input_linenum"
                    android:scrollbars="vertical"/>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:id="@+id/image_scroller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

            </HorizontalScrollView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>